--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -6,10 +6,9 @@ h2,
 h3 {
   overflow: hidden;
   width: fit-content;
-  font-family: var(--font-family-primary);
   font-weight: var(--fw-700);
   line-height: 1.2;
-  color: var(--color-black);
+  color: var(--color-black-50);
 }
 
 a,
@@ -20,8 +19,8 @@ button {
 }
 
 h1 {
-  font-size: clamp(24px, 2.2451rem + 1.0458vi, 44px);
-  line-height: 1;
+  font-family: var(--font-family-secondary);
+  font-size: clamp(24px, 2.2451rem + 1.0458vi, 50px);
 }
 
 h2 {
@@ -34,11 +33,9 @@ h3 {
 }
 
 p {
-  font-weight: var(--fw-300);
-  font-style: var(--fs-italic);
-  font-size: 18px;
-  line-height: 1.5;
-  text-align: justify;
-  text-indent: 30px;
-  color: var(--color-dark);
+  font-family: var(--font-family-primary);
+  font-weight: var(--fw-400);
+  font-size: 23px;
+  line-height: 1.2;
+  color: var(--color-black-50);
 }
