--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,16 +1,18 @@
 /* stylelint-disable alpha-value-notation */
 /* stylelint-disable color-function-notation */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,100..900;1,62.5..100,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&display=swap');
 
 :root {
-  --content-width: 1240px;
+  --content-width: 1360px;
   --container-offset: 16px;
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
 
   // font-family
-  --font-family-primary: "Open Sans", sans-serif;
-  --font-family-secondary: "Raleway", sans-serif;
+  --font-family-primary: "Didact Gothic", sans-serif;
+  --font-family-secondary: "Noto Sans", sans-serif;
+  --font-family-inter: "Inter", sans-serif;
 
   // font-style
   --fs-italic: italic;
@@ -24,13 +26,20 @@
 
   // color
   --color-white: #fff;
-  --color-black: #3A3A3A;
+  --color-black-50: #000000;
+  --color-black-100: #0D0D0D;
+  --color-black-150: #121212;
+
   --color-dark: #403E3E;
   --color-pink-100: #FFF6F6;
   --color-orange-100: #FCF8F3;
-  --color-orange-150: #e89f7166;
-  --color-orange-200: #E89F71;
-  --color-gray-50: #F9F9F9;
+
+  --color-green-50: #B9DE6A;
+  --color-green-100: #52B093;
+  --color-green-150: #82BDAB;
+  --color-green-200: #2C8469;
+  --color-gray-50: #8E8E8E;
+  
   --color-gray-100: #D8D8D8;
   --color-gray-150: rgba(255, 255, 255, 0.72);
   --color-gray-200: #8A8A8A;
