--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,11 +5,23 @@
   position: fixed;
   top: 0;
   z-index: 10;
-  padding: 40px 0 0;
+  padding: 20px 0;
   width: 100%;
-  background-color: var(--color-pink-100);
+  background-color: var(--color-white);
   transition-property: transform, padding;
   transition-duration: 0.15s;
+
+  .overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    display: none;
+    width: 100%;
+    height: 187px;
+    background-color: var(--color-green-200);
+    transition-duration: 0.2s;
+  }
 
   &.hide {
     transform: translateY(-100%);
