--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -3,54 +3,23 @@
 
 .hero {
   $root: &;
-  background-color: var(--color-pink-100);
-
-  &__inner {
-    position: relative;
-    display: flex;
-    overflow: hidden;
-    min-height: 633px;
-    background-position: right;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
 
   &__content {
     width: 100%;
-    max-width: 494px;
-    max-height: 553px;
     z-index: 2;
     display: flex;
     flex-direction: column;
-    padding: 60px;
-    background-color: var(--color-gray-150);
-    backdrop-filter: blur(2px);
     align-items: center;
-  }
-  
-  .container {
-    padding-top: 60px;
   }
 
   h1 {
-    margin-bottom: 45px;
-    line-height: 1.2;
-    letter-spacing: -1px;
-  }
-
-  p {
-    font-size: 24px;
-    text-align: justify;
-    text-indent: 30px;
+    text-transform: uppercase;
   }
 
   .btn {
-    padding: 19px;
-    margin-bottom: 44px;
-    max-width: 100%;
     justify-content: center;
-    line-height: 1.5;
-    font-size: 24px;
+    line-height: 1.2;
+    font-size: 23px;
 
     @include media(mobile-l) {
       padding: 10px 15px;
@@ -59,34 +28,40 @@
   }
 
   &--home{
+    display: flex;
+    justify-content: center;
+    padding: 104px 0 147px 128px;
+
     h1 {
-      margin-bottom: 97px;
-      line-height: 1.2;
-      letter-spacing: -1px;
+      margin-bottom: 32px;
+      color: var(--color-green-50);
+    }
+
+    #{$root}__image {
+      margin-right: 40px;
+    }
+
+    #{$root}__content {
+      max-width: 455px;
     }
 
     #{$root}__home {
-      display: flex;
-      flex-direction: column-reverse;
-
       p {
-        font-size: 24px;
-        margin-bottom: 44px;
-        text-align: justify;
-        text-indent: 30px;
+        font-size: 28px;
+        margin-bottom: 58px;
+        color: var(--color-black-100);
+        line-height: 1.16;
+
         @include media(mobile-l) {
           font-size: 18px;
         }
       }
     
       .btn {
-        padding: 19px;
-        margin-bottom: 0;
-        max-width: 100%;
         justify-content: center;
-        line-height: 1.5;
-        font-size: 24px;
-    
+        line-height: 1.2;
+        font-size: 23px;
+
         @include media(mobile-l) {
           padding: 10px 15px;
           font-size: 18px;
