--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -9,6 +9,7 @@
 
   &__inner {
     display: flex;
+    align-items: center;
     justify-content: flex-end;
     width: 100%;
 
@@ -30,10 +31,61 @@
     }
   }
 
+  .menu {
+    &__list {
+      position: absolute;
+      z-index: -100;
+      margin: 0;
+      opacity: 0;
+      transform: translateY(-180%);
+      transition-property: opacity, pointer-events, z-index, transfrom;
+      transition-duration: 0.2s;
+      transition-timing-function: ease-in-out;
+      pointer-events: none;
+    }
+
+    &__item {
+      &:not(:last-child) {
+        margin-bottom: 8px;
+      }
+    }
+
+    &__link {
+      font-size: 16px;
+      line-height: 1.31;
+    }
+  }
+
+  .nav__item--menu {
+    &:hover {
+      position: relative;
+      z-index: 2;
+      color: var(--color-white);
+
+      .menu__list {
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding-top: 8px;
+        width: max-content;
+        opacity: 1;
+        transform: translateY(0);
+        pointer-events: all;
+      }
+
+      .nav__link--menu {
+        position: relative;
+        z-index: 3;
+        color: var(--color-white);
+      }
+    }
+  }
+
   &__list {
     display: flex;
     align-items: center;
-    margin: 0 auto;
+    margin: 0 107px 0 auto;
 
     @include media(tablet-wide) {
       margin: 0 auto;
@@ -47,7 +99,7 @@
 
   &__item {
     &:not(:last-of-type) {
-      margin-right: 39px;
+      margin-right: 40px;
 
       @include media(tablet-wide) {
         margin-right: 12px;
@@ -62,6 +114,10 @@
       }
     }
 
+    &:first-child {
+      margin-right: 113px;
+    }
+
     @include media(mobile-l) {
       margin-bottom: 20px;
     }
@@ -69,14 +125,13 @@
 
   &__link {
     font-weight: var(--fw-300);
-    font-style: var(--fs-italic);
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.8;
     color: var(--color-black);
     background-color: var(--color-pink);
 
     &.true {
-      color: var(--color-orange-200);
+      color: var(--color-gray-50);
     }
 
     @include media(tablet) {
@@ -86,13 +141,28 @@
 
   .btn {
     border-radius: var(--radius-main);
-    padding: 10px 32px;
-    font-size: 20px;
+    padding: 12px 40px;
+    font-size: 16px;
     line-height: 1.2;
 
+    &.formsapp-popup-button {
+      margin: 0;
+      border: 1px solid var(--color-green-150);
+      font-family: var(--font-family-primary);
+      font-size: 16px;
+      color: var(--color-black)!important;
+      background-color: var(--color-white);
+
+      &:hover,
+      &:focus {
+        color: var(--color-white)!important;
+        background-color: var(--color-green-100);
+      }
+    }
+
     &--simple {
-      margin-right: 32px;
-      padding: 10px 30px;
+      margin-right: 18px;
+      padding: 12px 40px;
       min-width: unset;
     }
 
@@ -112,6 +182,10 @@
         margin: 0 auto;
       }
     }
+  }
+
+  .logo {
+    z-index: 2;
   }
 
   .logo__img {
