--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -38,6 +38,8 @@
   --color-green-100: #52B093;
   --color-green-150: #82BDAB;
   --color-green-200: #2C8469;
+  --color-green-250: #848625;
+  --color-orange: #C88716;
   --color-gray-50: #8E8E8E;
   
   --color-gray-100: #D8D8D8;
