--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -28,9 +28,9 @@ h2 {
 }
 
 h3 {
-  font-family: var(--font-family-secondary);
-  font-weight: var(--fw-700);
-  font-size: clamp(16px, 2rem + 1vi, 26px);
+  font-family: var(--font-family-primary);
+  font-weight: var(--fw-400);
+  font-size: clamp(16px, 2rem + 1vi, 28px);
 }
 
 p {
