--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -29,6 +29,7 @@
   --color-black-50: #000000;
   --color-black-100: #0D0D0D;
   --color-black-150: #121212;
+  --color-black-200: #000B33;
 
   --color-dark: #403E3E;
   --color-pink-100: #FFF6F6;
@@ -40,10 +41,13 @@
   --color-green-200: #2C8469;
   --color-green-250: #848625;
   --color-orange: #C88716;
+  --color-gray-40: #F2F2F2;
   --color-gray-50: #8E8E8E;
+  --color-gray-100:#1F1F1F;
+  --color-gray-150: #2C2C2E;
+
   
-  --color-gray-100: #D8D8D8;
-  --color-gray-150: rgba(255, 255, 255, 0.72);
+
   --color-gray-200: #8A8A8A;
   --color-gray-250: #EEEEEE;
 
