--- a/src/scss/components/_discover.scss
+++ b/src/scss/components/_discover.scss
@@ -6,19 +6,21 @@
 
   position: relative;
   overflow: hidden;
-  padding: 89px 0;
+  padding: 129px 0 0;
   max-width: 100%;
 
   h2 {
+    margin: 0 auto 0 235px;
     font-family: var(--font-family-secondary);
     font-weight: var(--fw-700);
     font-size: 40px;
     line-height: 1;
     text-transform: uppercase;
-    color: var(--color-green-200);
+    color: var(--color-green-50);
   }
 
   p {
+    margin: 0 134px 0 auto;
     max-width: 756px;
     color: var(--color-black-50);
   }
@@ -30,10 +32,10 @@
   &__title {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 16px;
+    margin-bottom: 17px;
   }
 
-  &-slider {
+  &__container {
     overflow-x: scroll;
     overflow-y: hidden;
     -ms-overflow-style: none;  /* IE and Edge */
@@ -41,6 +43,10 @@
     &::-webkit-scrollbar {   /* Hide scrollbar for Chrome, Safari and Opera */
       overflow-x: hidden;
     }
+  }
+
+  &-slider {
+    overflow: visible;
 
     &.container {
       padding-right: 0;
