--- a/src/scss/pages/home/_request.scss
+++ b/src/scss/pages/home/_request.scss
@@ -4,63 +4,67 @@
 .request {
   $root: &;
 
-  padding: 64px 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 80px 60px;
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
 
   &__form {
     display: flex;
-    margin-bottom: 18px;
+    flex-direction: column;
     width: 100%;
-    text-align: center;
+    max-width: 800px;
   }
 
   h2 {
-    margin-bottom: 23px;
-    letter-spacing: -0.8px;
+    margin-bottom: 32px;
+    font-family: var(--font-family-inter);
+    font-weight: var(--fw-500);
+    font-size: 28px;
+    line-height: 1.16;
+    color: var(--color-green-200);
   }
 
   label {
     display: block;
-    margin-right: 20px;
+    margin-bottom: 16px;
     width: 100%;
-    max-width: 295px;
-
-    &:last-of-type {
-      max-width: 400px;
-    }
   }
 
   textarea,
   input {
-    border: 1px solid var(--color-dark);
-    border-radius: var(--radius-main);
-    padding: 12px 16px;
+    border: 1px solid transparent;
+    padding: 16px;
     width: 100%;
     height: 100%;
-    max-width: 295px;
+    max-width: 800px;
     max-height: 48px;
-    font-family: var(--font-family-primary);
-    font-weight: var(--fw-300);
-    font-size: 18px;
-    line-height: 1.33;
+    font-family: var(--font-family-inter);
+    font-weight: var(--fw-400);
+    font-size: 16px;
+    line-height: 1;
+    background-color: var(--color-gray-40);
     resize: none;
 
     &::placeholder {
-      color: var(--color-gray-200);
+      color: var(--color-gray-150);
     }
   }
 
   textarea {
     overflow: hidden;
     width: 100%;
-    max-width: 400px;
   }
 
-  .btn {
-    border-radius: 24px;
-    padding: 10px 32px;
-    font-weight: var(--fw-600);
-    font-size: 18px;
-    line-height: 1.33;
+  img {
+    position: relative;
+    top: -43px;
+    max-height: 324px;
   }
 
   @include media(tablet) {
