--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -29,6 +29,7 @@
 
   &.formsapp-popup-button {
     margin: 0;
+    border-radius: 50px;
     font-family: var(--font-family-primary);
     font-size: 20px;
     color: var(--color-wite);
