--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -30,27 +30,23 @@
   --color-black-100: #0D0D0D;
   --color-black-150: #121212;
   --color-black-200: #000B33;
-
-  --color-dark: #403E3E;
-  --color-pink-100: #FFF6F6;
-  --color-orange-100: #FCF8F3;
-
   --color-green-50: #B9DE6A;
   --color-green-100: #52B093;
   --color-green-150: #82BDAB;
   --color-green-200: #2C8469;
   --color-green-250: #848625;
+  --color-green-300: #D8E9B3;
+  --color-green-350: #91CBBA;
   --color-orange: #C88716;
+  --color-yellow: #F2EAA5;
   --color-gray-40: #F2F2F2;
   --color-gray-50: #8E8E8E;
+  --color-gray-60: #C4C4C4;
   --color-gray-100:#1F1F1F;
   --color-gray-150: #2C2C2E;
-
+  --color-blue-50: #E1F1F2;
+  --color-blue-60: #DCF0EA;
   
-
-  --color-gray-200: #8A8A8A;
-  --color-gray-250: #EEEEEE;
-
   //  radius
   --radius-main: 40px;
 
