--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -70,6 +70,92 @@
     }
   }
 
+  &--about-us {
+    display: flex;
+    justify-content: flex-start;
+    padding: 104px 0 154px;
+
+    h1 {
+      margin-bottom: 32px;
+      color: var(--color-green-50);
+    }
+
+    #{$root}__image {
+      margin-right: 40px;
+    }
+
+    #{$root}__content {
+      max-width: 455px;
+    }
+
+    #{$root}__about-us {
+      p {
+        font-size: 28px;
+        margin-bottom: 58px;
+        color: var(--color-black-100);
+        line-height: 1.16;
+
+        @include media(mobile-l) {
+          font-size: 18px;
+        }
+      }
+    
+      .btn {
+        justify-content: center;
+        line-height: 1.2;
+        font-size: 23px;
+
+        @include media(mobile-l) {
+          padding: 10px 15px;
+          font-size: 18px;
+        }
+      }
+    }
+  }
+
+  &--tours-excursions {
+    padding: 104px 0 100px;
+    display: flex;
+    flex-direction: column-reverse;
+
+    h1 {
+      margin-right: 32px;
+    }
+
+    #{$root}__content {
+      display: flex;
+      flex-direction: row;
+      margin-bottom: 40px;
+    }
+
+    #{$root}__tours-excursions {
+      width: 100%;
+      max-width: 426px;
+
+      p {
+        font-size: 28px;
+        margin-bottom: 13px;
+        color: var(--color-black-100);
+        line-height: 1.16;
+
+        @include media(mobile-l) {
+          font-size: 18px;
+        }
+      }
+    
+      .btn {
+        justify-content: center;
+        line-height: 1.2;
+        font-size: 23px;
+
+        @include media(mobile-l) {
+          padding: 10px 15px;
+          font-size: 18px;
+        }
+      }
+    }
+  }
+
   &--services {
     h1 {
       margin-bottom: 45px;
