--- a/src/scss/pages/home/_about.scss
+++ b/src/scss/pages/home/_about.scss
@@ -112,6 +112,243 @@
     background-color: var(--color-pink);
   }
 
+  &--about-us {
+    padding: 0;
+    max-height: 424px;
+    height: 100%;
+
+    #{$root}-slider {
+    height: 100%;
+    }
+
+    #{$root}__grid {
+      grid-template-columns: repeat(4, 1fr);
+    }
+
+    #{$root}__content {
+      max-width: 487px;
+      width: 100%;
+      border-right: 1px solid var(--color-black-50);
+      margin-right: 0;
+      padding: 20px 0;
+    }
+
+    #{$root}__item {
+      border-top: 1px solid var(--color-black-50);
+      border-bottom: 1px solid var(--color-black-50);
+
+      .container {
+        display: flex;
+
+        p {
+          font-family: var(--font-family-inter);
+          font-size: 40px;
+          font-weight: var(--fw-300);
+          line-height: 1;
+          padding: 20px 12px;
+          color: var(--color-black-100);
+          margin-bottom: 0;
+          max-width: 800px;
+        }
+      }
+    }
+
+    .container--btns {
+      margin-bottom: 0;
+    }
+
+    #{$root}__btns {
+      max-width: 1000px;
+      width: 100%;
+      justify-content: space-between;
+      display: flex;
+      position: absolute;
+      bottom: 20%;
+      right: 19%;
+  
+      .btn {
+        z-index: 3;
+        width: auto;
+        min-width: auto;
+        background-color: transparent;
+        opacity: 1;
+        font-size: 28px;
+        font-weight: var(--fw-400);
+  
+        &::after {
+          right: 0;
+        }
+  
+        &.swiper-button-disabled {
+          pointer-events: none;
+          opacity: 0;
+        }
+  
+        &--prev {
+          color: var(--color-green-50);
+          scale: 1;
+
+          &::before {
+            content: '';
+            width: 191px;
+            height: 24px;
+            background-image: url("data:image/svg+xml,%3Csvg width='189' height='16' viewBox='0 0 189 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M188.707 8.70711C189.098 8.31658 189.098 7.68342 188.707 7.29289L182.343 0.928932C181.953 0.538408 181.319 0.538408 180.929 0.928932C180.538 1.31946 180.538 1.95262 180.929 2.34315L186.586 8L180.929 13.6569C180.538 14.0474 180.538 14.6805 180.929 15.0711C181.319 15.4616 181.953 15.4616 182.343 15.0711L188.707 8.70711ZM0 9H188V7H0L0 9Z' fill='%23B9DE6A'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-size: contain;
+            rotate: (180deg);
+            margin-right: 16px;
+          }
+        }
+  
+        &--next {
+          color: var(--color-green-50);
+          &.swiper-button-disabled {
+            display: none;
+          }
+
+          &::before {
+            content: '';
+            width: 191px;
+            height: 24px;
+            background-image: url("data:image/svg+xml,%3Csvg width='189' height='16' viewBox='0 0 189 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M188.707 8.70711C189.098 8.31658 189.098 7.68342 188.707 7.29289L182.343 0.928932C181.953 0.538408 181.319 0.538408 180.929 0.928932C180.538 1.31946 180.538 1.95262 180.929 2.34315L186.586 8L180.929 13.6569C180.538 14.0474 180.538 14.6805 180.929 15.0711C181.319 15.4616 181.953 15.4616 182.343 15.0711L188.707 8.70711ZM0 9H188V7H0L0 9Z' fill='%23B9DE6A'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-size: contain;
+            position: relative;
+            top: 7px;
+            margin-right: 16px;
+          }
+        }
+      }
+    }
+  
+    #{$root}__btn {
+      margin: 0 auto;
+    }
+  }
+
+  &--tours-excursions {
+    padding: 0;
+    max-height: 426px;
+    height: 100%;
+
+    h2 {
+      color: var(--color-green-200);
+      margin-bottom: 11px;
+    }
+
+    #{$root}-slider {
+    height: 100%;
+    }
+
+    #{$root}__grid {
+      grid-template-columns: repeat(4, 1fr);
+    }
+
+    #{$root}__content {
+      max-width: 595px;
+      width: 100%;
+      border-right: 1px solid var(--color-black-50);
+      margin-right: 0;
+      padding: 20px 6px;
+    }
+
+    #{$root}__item {
+      border-top: 1px solid var(--color-gray-60);
+      border-bottom: 1px solid var(--color-gray-60);
+      overflow: auto;
+
+      .container {
+        display: flex;
+
+        p {
+          font-family: var(--font-family-primary);
+          font-size: clamp(16px, 2rem + 1vi, 28px);
+          color: var(--color-black-100);
+          margin-bottom: 34px;
+          max-width: 588px;
+        }
+      }
+    }
+
+    .btn--simple {
+      font-size: 16px;
+      color: var(--color-gray-60);
+      padding: 11px 40px;
+    }
+
+    .container--btns {
+      margin-bottom: 0;
+    }
+
+    #{$root}__btns {
+      max-width: 1340px;
+      width: 100%;
+      justify-content: space-between;
+      display: flex;
+      position: absolute;
+      bottom: 6%;
+      right: 4%;
+  
+      .btn {
+        z-index: 3;
+        width: auto;
+        min-width: auto;
+        background-color: transparent;
+        opacity: 1;
+        font-size: 28px;
+        font-weight: var(--fw-400);
+  
+        &::after {
+          right: 0;
+        }
+  
+        &.swiper-button-disabled {
+          pointer-events: none;
+          opacity: 0;
+        }
+  
+        &--prev {
+          color: var(--color-green-50);
+          scale: 1;
+
+          &::before {
+            content: '';
+            width: 191px;
+            height: 24px;
+            background-image: url("data:image/svg+xml,%3Csvg width='189' height='16' viewBox='0 0 189 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M188.707 8.70711C189.098 8.31658 189.098 7.68342 188.707 7.29289L182.343 0.928932C181.953 0.538408 181.319 0.538408 180.929 0.928932C180.538 1.31946 180.538 1.95262 180.929 2.34315L186.586 8L180.929 13.6569C180.538 14.0474 180.538 14.6805 180.929 15.0711C181.319 15.4616 181.953 15.4616 182.343 15.0711L188.707 8.70711ZM0 9H188V7H0L0 9Z' fill='%23B9DE6A'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-size: contain;
+            rotate: (180deg);
+            margin-right: 16px;
+          }
+        }
+  
+        &--next {
+          color: var(--color-green-50);
+          &.swiper-button-disabled {
+            display: none;
+          }
+
+          &::before {
+            content: '';
+            width: 140px;
+            height: 24px;
+            background-image: url("data:image/svg+xml,%3Csvg width='189' height='16' viewBox='0 0 189 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M188.707 8.70711C189.098 8.31658 189.098 7.68342 188.707 7.29289L182.343 0.928932C181.953 0.538408 181.319 0.538408 180.929 0.928932C180.538 1.31946 180.538 1.95262 180.929 2.34315L186.586 8L180.929 13.6569C180.538 14.0474 180.538 14.6805 180.929 15.0711C181.319 15.4616 181.953 15.4616 182.343 15.0711L188.707 8.70711ZM0 9H188V7H0L0 9Z' fill='%23B9DE6A'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-size: contain;
+            position: relative;
+            top: 10px;
+            margin-right: 16px;
+          }
+        }
+      }
+    }
+  
+    #{$root}__btn {
+      margin: 0 auto;
+    }
+  }
+
   @include media(tablet) {
     padding: rem(60) 0;
 
