--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -39,6 +39,7 @@
   --color-green-350: #91CBBA;
   --color-orange: #C88716;
   --color-yellow: #F2EAA5;
+  --color-gray-10: rgba(255, 255, 255, 0.3);
   --color-gray-40: #F2F2F2;
   --color-gray-50: #8E8E8E;
   --color-gray-60: #C4C4C4;
@@ -46,6 +47,7 @@
   --color-gray-150: #2C2C2E;
   --color-blue-50: #E1F1F2;
   --color-blue-60: #DCF0EA;
+
   
   //  radius
   --radius-main: 40px;
