--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -156,6 +156,54 @@
     }
   }
 
+  &--destinations {
+    display: flex;
+    justify-content: center;
+    padding: 39px 0 80px 59px;
+
+    h1 {
+      margin-bottom: 20px;
+      overflow: visible;
+    }
+
+    #{$root}__image {
+      margin-right: 40px;
+    }
+
+    #{$root}__content {
+      max-width: 455px;
+    }
+
+    #{$root}__destinations {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+
+      p {
+        font-size: 28px;
+        margin-bottom: 13px;
+        color: var(--color-black-100);
+        line-height: 1.16;
+
+        @include media(mobile-l) {
+          font-size: 18px;
+        }
+      }
+    
+      .btn {
+        justify-content: center;
+        line-height: 1.2;
+        font-size: 23px;
+        margin-top: auto;
+
+        @include media(mobile-l) {
+          padding: 10px 15px;
+          font-size: 18px;
+        }
+      }
+    }
+  }
+
   &--services {
     h1 {
       margin-bottom: 45px;
