--- a/src/scss/components/_featured.scss
+++ b/src/scss/components/_featured.scss
@@ -42,6 +42,10 @@
     }
   }
 
+  &__link {
+    display: none;
+  }
+
   &-slider {
     overflow: visible;
 
@@ -118,6 +122,73 @@
           color: var(--color-orange);
         }
       }
+    }
+  }
+
+  &--destinations {
+    padding: 101px 0;
+
+    .btn {
+      display: none;
+    }
+
+    #{$root}__item {
+      position: relative;
+      cursor: pointer;
+
+      h3 {
+        font-family: var(--font-family-secondary);
+        font-weight: var(--fw-700);
+        font-size: clamp(16px, 2rem + 1vi, 26px);
+      }
+
+      &:hover .featured__link,
+      &:focus .featured__link {
+        cursor: pointer;
+        opacity: 1;
+        display: block;
+        background: var(--color-gray-10);
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition-property: opacity, visibility;
+        transition-duration: 0.3s;
+        transition-timing-function: ease-in-out;
+
+        @include media(tablet) {
+          opacity: 0;
+        }
+      }
+
+      .featured__link {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        padding: 26px 24px;
+        top: 0;
+        opacity: 0;
+        transition-property: opacity, visibility;
+        transition-duration: 0.3s;
+        transition-timing-function: ease-in-out;
+        font-family: var(--font-family-primary);
+        font-weight: var(--fw-400);
+        font-size: clamp(16px, 2rem + 1vi, 28px);
+        color: var(--color-white);
+      }
+    }
+
+    #{$root}__content {
+      padding-left: 8px;
+
+      p {
+        max-width: 320px;
+        width: 100%;
+      }
+    }
+
+    .swiper-slide {
+      margin-right: 8px!important;
     }
   }
 
