--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -38,6 +38,7 @@
   --color-green-300: #D8E9B3;
   --color-green-350: #91CBBA;
   --color-orange: #C88716;
+  --color-orange-100: #AC7903;
   --color-yellow: #F2EAA5;
   --color-gray-10: rgba(255, 255, 255, 0.3);
   --color-gray-40: #F2F2F2;
