--- a/src/scss/pages/about-us/_values.scss
+++ b/src/scss/pages/about-us/_values.scss
@@ -192,6 +192,32 @@
     }
   }
 
+  &--wildlife {
+    padding: 121px 0 0;
+    
+    #{$root}__item {
+      padding: 0;
+
+      &::before {
+        content: unset;
+      }
+
+      p {
+        margin-bottom: 20px;
+      }
+    }
+
+    .container--btns {
+      bottom: 10%;
+      left: 17%;
+      right: unset;
+    }
+
+    h3 {
+      margin-bottom: 20px;
+    }
+  }
+
   @include media(tablet) {
     padding: rem(60) 0;
 
