--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -37,6 +37,7 @@
   --color-green-250: #848625;
   --color-green-300: #D8E9B3;
   --color-green-350: #91CBBA;
+  --color-green-400: #1E5041;
   --color-orange: #C88716;
   --color-orange-100: #AC7903;
   --color-yellow: #F2EAA5;
