--- a/src/scss/components/_additional.scss
+++ b/src/scss/components/_additional.scss
@@ -67,6 +67,23 @@
     }
   }
 
+  &--wildlife {
+    padding: 100px 0 60px;
+
+    p {
+      margin-right: 11.3%;
+      max-width: 735px;
+    }
+  }
+
+  &--tips {
+    padding: 100px 0 60px;
+
+    p {
+      margin-right: 21.3%;
+    }
+  }
+
   @include media(tablet) {
     padding: 30px 0;
   }
