--- a/src/scss/pages/about-us/_values.scss
+++ b/src/scss/pages/about-us/_values.scss
@@ -194,7 +194,7 @@
 
   &--wildlife {
     padding: 121px 0 0;
-    
+
     #{$root}__item {
       padding: 0;
 
@@ -215,6 +215,23 @@
 
     h3 {
       margin-bottom: 20px;
+      font-family: var(--font-family-inter);
+      font-weight: var(--fw-600);
+      font-size: clamp(20px, 2rem + 1vi, 40px);
+      line-height: 1.1;
+      color: var(--color-black-100);
+    }
+
+    #{$root}__content {
+      padding: 20px 12px;
+      border-left: 1px solid var(--color-gray-50);
+      border-bottom: 1px solid var(--color-gray-50);
+
+      p {
+        margin-bottom: 19px;
+        font-size: clamp(20px, 2rem + 1vi, 28px);
+        line-height: 1.16;
+      }
     }
   }
 
