--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -47,6 +47,10 @@ body {
     max-width: 922px;
   }
 
+  &--policy {
+    max-width: 1271px;
+  }
+
   &--power-black {
     .request {
       margin: 210px 0 90px;
@@ -82,6 +86,13 @@ body {
 
 .main {
   padding-top: var(--header-height);
+
+  @include media(tablet) {
+    &--tours {
+      display: flex;
+      flex-direction: column;
+    }
+  }
 }
 
 #form-request {
