--- a/src/scss/components/_additional.scss
+++ b/src/scss/components/_additional.scss
@@ -10,7 +10,7 @@
     max-width: 1135px;
     font-family: var(--font-family-secondary);
     font-weight: var(--fw-700);
-    font-size: clamp(20px, 2rem + 1vi, 40px);
+    font-size: clamp(20px, 1.3459rem + 1.0458vi, 40px);
     line-height: 1;
     text-transform: uppercase;
     color: var(--color-green-200);
@@ -86,5 +86,9 @@
 
   @include media(tablet) {
     padding: 30px 0;
+
+    p {
+      text-indent: 0;
+    }
   }
 }
