--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -42,13 +42,15 @@
     }
   }
 
-  &--simple {
-    border-color: var(--color-green-150);
-    color: var(--color-black);
+  &--simple,
+  &--simple.formsapp-popup-button {
+    border: 1px solid var(--color-green-150);
+    color: var(--color-black-50)!important;
     background-color: var(--color-white);
 
     &:hover,
     &:focus {
+      color: var(--color-white)!important;
       border-color: transparent;
     }
   }
