--- a/src/scss/components/_burger.scss
+++ b/src/scss/components/_burger.scss
@@ -8,7 +8,7 @@
   --move: calc(var(--buger-size) / 3);
   --move-decrement: calc(var(--move) * -1);
   --transition-time: 0.5s;
-  --lines-color: var(--color-dark);
+  --lines-color: var(--color-black-50);
 
   position: absolute;
   right: 20px;
