--- a/src/scss/components/_featured.scss
+++ b/src/scss/components/_featured.scss
@@ -12,7 +12,7 @@
   h2 {
     font-family: var(--font-family-secondary);
     font-weight: var(--fw-700);
-    font-size: 40px;
+    font-size: clamp(20px, 1.3459rem + 1.0458vi, 40px);
     line-height: 1;
     text-transform: uppercase;
     color: var(--color-green-200);
@@ -232,11 +232,31 @@
     }
   }
 
+  @include media (desktop) {
+    &__content {
+      p {
+        padding: 0 10px;
+      }
+    }
+  }
+
   @include media(tablet) {
-    padding: rem(60) 0;
+    padding: 30px 0;
 
     &__slider {
       margin-bottom: 0;
+    }
+
+    &__content {
+      flex-direction: column;
+
+      p {
+        padding: 0;
+      }
+    }
+
+    &__header {
+      align-items: center;
     }
   }
 
@@ -251,10 +271,8 @@
       max-width: 500px;
     }
 
-    &__content {
-      margin: 0 0 20px;
-      padding: 20px;
-      max-width: 500px;
+    img {
+      aspect-ratio: 16 / 7;
     }
   }
 
