--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -51,6 +51,8 @@
 
   @include media(mobile-l) {
     &__copyrigth {
+      padding: 30px 0;
+
       .container {
         flex-direction: column-reverse;
       }
@@ -73,7 +75,11 @@
 
   @include media(mobile-m) {
     &__copyrigth {
-      text-align: left;
+      text-align: center;
+    }
+
+    p {
+      text-align: center;
     }
   }
 }
