--- a/src/scss/components/_policy.scss
+++ b/src/scss/components/_policy.scss
@@ -3,71 +3,60 @@
 
 .policy {
   padding: 60px 0;
-  line-height: 1.5;
+  max-width: 991px;
 
   &__content {
     &:not(:last-child) {
-      margin-bottom: 60px;
+      margin-bottom: 20px;
     }
   }
 
   h1 {
     position: relative;
-    margin-bottom: 60px;
-    font-weight: var(--fw-700);
-    font-size: clamp(20px, 2rem + 1vi, 40px);
-    line-height: 1;
-    text-transform: uppercase;
+    margin-bottom: 40px;
+    font-family: var(--font-family-inter);
+    font-weight: var(--fw-500);
+    font-size: clamp(20px, 2rem + 1vi, 28px);
+    line-height: 1.16;
+    color: var(--color-green-450);
   }
 
   h2 {
     margin-bottom: 24px;
     font-family: var(--font-family-primary);
-    font-weight: var(--fw-700);
-    font-size: clamp(20px, 2rem + 1vi, 38px);
+    font-weight: var(--fw-400);
+    font-size: clamp(16px, 2rem + 1vi, 23px);
     line-height: 1.2;
+    color: var(--color-black-50);
   }
 
   ul {
-    margin-bottom: 60px;
+    list-style: disc;
+    margin-bottom: 20px;
+    padding-left: 32px;
   }
 
   li {
-    font-weight: var(--fw-300);
-    font-style: var(--fs-italic);
-    font-size: 18px;
-    line-height: 1.5;
-    text-align: justify;
-    text-indent: 0;
-    color: var(--color-dark);
-
-    &::before {
-      content: "✓";
-      margin-right: 10px;
-    }
+    list-style: disc;
+    font-family: var(--font-family-primary);
+    font-weight: var(--fw-400);
+    font-size: clamp(16px, 2rem + 1vi, 23px);
+    line-height: 1.2;
+    color: var(--color-black-50);
 
     &:not(:last-child) {
-      margin-bottom: 3px;
+      margin-bottom: 30px;
     }
   }
 
   p {
-    font-weight: var(--fw-300);
-    font-style: var(--fs-italic);
-    font-size: 18px;
-    line-height: 1.5;
-    text-align: justify;
-    text-indent: 30px;
-    color: var(--color-dark);
-
     &:not(:last-child) {
-      margin-bottom: 48px;
+      margin-bottom: 20px;
     }
   }
 
   a {
-    text-decoration: underline;
-    color: var(--color-dark);
+    color: var(--color-black-50);
   }
 
   @include media(tablet) {
