--- a/src/scss/components/_testimonials.scss
+++ b/src/scss/components/_testimonials.scss
@@ -12,7 +12,7 @@
   h2 {
     font-family: var(--font-family-secondary);
     font-weight: var(--fw-700);
-    font-size: 40px;
+    font-size: clamp(20px, 1.3459rem + 1.0458vi, 40px);
     line-height: 1;
     text-transform: uppercase;
     color: var(--color-gray-50);
@@ -207,7 +207,7 @@
   }
 
   @include media(tablet) {
-    padding: rem(60) 0;
+    padding: 30px 0;
 
     &__slider {
       margin-bottom: 0;
@@ -215,24 +215,38 @@
   }
 
   @include media(mobile-l) {
+    &-slider {
+      max-height: 415px;
+    }
+
+    &__item {
+      max-height: 415px;
+      padding-right: 0;
+      flex-direction: column;
+      align-items: center;
+    }
+
     &__slide {
       display: block;
       align-items: center;
     }
 
-    &__image {
-      margin-bottom: 12px;
-      max-width: 500px;
-    }
-
     &__content {
-      margin: 0 0 20px;
       padding: 20px;
-      max-width: 500px;
+
+      &:nth-child(2) {
+        padding: 20px;
+        max-width:  unset;
+        border-left: unset;
+      }
     }
   }
 
   @include media(mobile-m) {
+    h2 {
+      text-indent: 0;
+    }
+
     &__btns {
       display: none;
     }
