--- a/src/scss/pages/home/_about.scss
+++ b/src/scss/pages/home/_about.scss
@@ -13,6 +13,10 @@
     margin-bottom: 60px;
   }
 
+  img {
+    margin-right: 20px;
+  }
+
   h2 {
     margin-bottom: 20px;
     font-family: var(--font-family-inter);
@@ -262,7 +266,7 @@
 
         p {
           font-family: var(--font-family-primary);
-          font-size: clamp(16px, 2rem + 1vi, 28px);
+          font-size: clamp(14px, 1.01rem + 0.6vi, 28px);
           color: var(--color-black-100);
           margin-bottom: 34px;
           max-width: 588px;
@@ -347,10 +351,46 @@
     #{$root}__btn {
       margin: 0 auto;
     }
+
+    @include media(mobile-m) {
+      #{$root}__item {
+        overflow: hidden;
+        
+        .container {
+          flex-direction: column;
+
+          p {
+            margin-bottom: 10px;
+          }
+        }
+
+        img {
+          margin: 0;
+          aspect-ratio: 16 / 7;
+        }
+      }
+
+      #{$root}__content {
+        border-right: 0;
+      }
+    }
   }
 
   @include media(tablet) {
-    padding: rem(60) 0;
+    padding: 30px 0;
+
+    h2 {
+      font-size: clamp(20px, 1.3459rem + 1.0458vi, 40px);
+    }
+
+    img {
+      max-width: 50%;
+      aspect-ratio: 16 / 7;
+    }
+
+    .container--btns {
+      margin-bottom: 30px;
+    }
 
     &__slider {
       margin-bottom: 0;
@@ -363,22 +403,25 @@
       align-items: center;
     }
 
-    &__image {
-      margin-bottom: 12px;
-      max-width: 500px;
-    }
-
     &__content {
-      margin: 0 0 20px;
-      padding: 20px;
-      max-width: 500px;
+      margin-right: 0;
+      
+      p {
+        margin-bottom: 20px;
+      }
     }
   }
 
   @include media(mobile-m) {
-    &__btns {
-      display: none;
-    }
+    &__item {
+      flex-direction: column;
+      justify-content: flex-start;
+
+      img {
+        max-width: 100%;
+        margin-bottom: 12px;
+      }
+    }    
 
     .swiper-scrollbar {
       position: relative !important;
