--- a/src/scss/pages/tours-excursions/_divider.scss
+++ b/src/scss/pages/tours-excursions/_divider.scss
@@ -15,6 +15,11 @@
   }
 
   @include media(tablet) {
-    padding: 30px 0;
+    margin: 30px 0;
+    padding: 15px 0;
+
+    p {
+      font-size: clamp(14px, 1.01rem + 0.6vi, 23px);
+    }
   }
 }
