--- a/src/scss/pages/tours-excursions/_faq.scss
+++ b/src/scss/pages/tours-excursions/_faq.scss
@@ -176,10 +176,23 @@
   }
 
   @include media(tablet) {
-    padding: rem(60) 0;
+    padding: 30px 0;
+    flex-direction: column;
 
     &__slider {
       margin-bottom: 0;
+    }
+
+    &__item {
+      padding-right: 0;
+    }
+
+    &__title {
+      width: 100%;
+      max-width: unset;
+      justify-content: flex-start;
+      padding-right: 0;
+      margin-bottom: 20px;
     }
   }
 
@@ -188,24 +201,9 @@
       display: block;
       align-items: center;
     }
-
-    &__image {
-      margin-bottom: 12px;
-      max-width: 500px;
-    }
-
-    &__content {
-      margin: 0 0 20px;
-      padding: 20px;
-      max-width: 500px;
-    }
   }
 
   @include media(mobile-m) {
-    &__btns {
-      display: none;
-    }
-
     .swiper-scrollbar {
       position: relative !important;
       display: block;
